[package]
name = "scheduled-executor"
version = "0.4.0"
authors = ["Federico Giraud <giraud.federico@gmail.com>"]
repository = "https://github.com/fede1024/rust-scheduled-executor"
readme = "README.md"
license = "MIT"
description = "Single and multi-threaded task scheduler"
keywords = ["executor", "scheduler"]
categories = ["concurrency"]

[dependencies]
futures = "^0.1.14"
futures-cpupool = "^0.1.5"
log = "^0.3.0"
tokio-core = "^0.1.6"

[dev-dependencies]
rand = "^0.3"
